🚀 zha custom updater url

--- a/config/integrations/zha.yaml
+++ b/config/integrations/zha.yaml
@@ -3,3 +3,4 @@ zha:
   zigpy_config:
     ota:
       ikea_provider: 'true'
+      ikea_update_url: http://fw.test.ota.homesmart.ikea.net/feed/version_info.json
